...
        android:paddingRight="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="540dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et1"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:background="@drawable/values"
            android:hint="enter message"
            android:layout_marginRight="4dp"
            android:paddingLeft="10dp"
...
            android:onClick="getSpeechInput"
            app:srcCompat="@android:drawable/ic_btn_speak_now" />

    </LinearLayout>

    <Button
        android:id="@+id/sendbutton1"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="240dp"
...
