<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:nestedScrollingEnabled="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/mainbg"
    >


    <Button
        android:id="@+id/sendbutton2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="109dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="198dp"
        android:background="#8BC34A"
        android:gravity="center"
        android:text="SEND"
        android:textSize="25sp"
        app:backgroundTint="#4CAF50" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:background="#C39999"
        android:inputType="textNoSuggestions"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:ems="10"
        android:gravity="center"
        android:hint="enter email/phone number" >
        <requestFocus />
        </EditText>



</RelativeLayout>
